--- a/package.json
+++ b/package.json
@@ -15,5 +15,24 @@
   "bugs": {
     "url": "https://github.com/21grahams/covidInformation/issues"
   },
-  "homepage": "https://github.com/21grahams/covidInformation#readme"
+  "homepage": "https://github.com/21grahams/covidInformation#readme",
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.7",
+    "nodemon": "^2.0.12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
