--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx nodemon server/index.js",
-    "react-dev": "webpack --w"
+    "react-dev": "webpack -w"
   },
   "repository": {
     "type": "git",
