--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.7",
     "nodemon": "^2.0.12",
+    "pg": "^8.7.1",
+    "postgres": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
