switched back to toggle to display additional stats for each country. Brought in comma npm package for stats

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "comma-number": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.7",
