added material ui and search bar

--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.4",
     "comma-number": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "material-ui-search-bar": "^1.0.0",
     "mongoose": "^6.0.7",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
