--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
     "comma-number": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -40,6 +41,7 @@
     "pg": "^8.7.1",
     "postgres": "^1.0.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2"
   }
 }
